# SEAM2

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start.sh
.github/workflows/: sync-wiki.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: 0001_sprint_1_tables.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/api/routes/: health.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py  session.py
backend/tests/: test_health.py
docs/: architecture.md  gap-analysis.md  github-issues.md  roadmap.md
docs/wiki/: Home.md  _Sidebar.md
docs/wiki/01-project-overview/: Product-Vision.md  Technical-Philosophy.md  Version-1-Scope.md
docs/wiki/02-architecture/: Backend-Architecture.md  Monorepo-Structure.md  System-Architecture.md
docs/wiki/03-local-development/: Docker-Compose-Plan.md  Environment-Variables.md  Local-Setup.md
docs/wiki/04-data-model/: Core-Tables.md  Database-Design-Rules.md  Identity-and-Upsert-Rules.md
docs/wiki/05-ingestion/: Ingestion-Job-Framework.md  Oceans-X-Client.md  Oceans-X-Jobs.md  Sanctions-and-News-Ingestion.md
docs/wiki/06-api/: Backend-API-Plan.md  Map-and-Graph-APIs.md
docs/wiki/07-frontend/: Frontend-Pages.md  UI-Layout-Direction.md
docs/wiki/08-ai-risk/: AI-Explanation-Plan.md  Risk-Flags.md
docs/wiki/09-roadmap/: Build-Order.md  (+2 more)
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: publish_wiki.sh
(+4 files in other folders)
