[project]
name = "seam-backend"
version = "0.1.0"
description = "FastAPI backend for SEAM"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "geoalchemy2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
